--- a/core/src/test/resources/flows/valids/all-flowable.yaml
+++ b/core/src/test/resources/flows/valids/all-flowable.yaml
@@ -4,15 +4,15 @@ namespace: io.kestra.tests
 tasks:
   # Each
   - id: 1-each
-    type: io.kestra.core.tasks.flows.EachSequential
-    value: '["value 1", "value 2", "value 3"]'
+    type: io.kestra.core.tasks.flows.ForEach
+    values: '["value 1", "value 2", "value 3"]'
     tasks:
       - id: 1-each-1
         type: io.kestra.core.tasks.debugs.Return
         format: "{{task.id}} > {{taskrun.value}}"
       - id: 1-each-2
-        type: io.kestra.core.tasks.flows.EachSequential
-        value: '["a", "b"]'
+        type: io.kestra.core.tasks.flows.ForEach
+        values: '["a", "b"]'
         tasks:
           - id: 1-each-2-1
             type: io.kestra.core.tasks.debugs.Return
