--- a/core/src/test/resources/flows/valids/disable-flowable.yaml
+++ b/core/src/test/resources/flows/valids/disable-flowable.yaml
@@ -4,8 +4,8 @@ namespace: io.kestra.tests
 tasks:
   # Each
   - id: 1-each
-    type: io.kestra.core.tasks.flows.EachSequential
-    value: '["value 1", "value 2", "value 3"]'
+    type: io.kestra.core.tasks.flows.ForEach
+    values: '["value 1", "value 2", "value 3"]'
     tasks:
       - id: 1-each-1
         type: io.kestra.core.tasks.debugs.Return
