--- a/core/src/test/resources/flows/valids/each-empty.yaml
+++ b/core/src/test/resources/flows/valids/each-empty.yaml
@@ -3,8 +3,8 @@ namespace: io.kestra.tests
 
 tasks:
   - id: 1_each
-    type: io.kestra.core.tasks.flows.EachSequential
-    value: '[]'
+    type: io.kestra.core.tasks.flows.ForEach
+    values: '[]'
     tasks:
       - id: 1-1
         type: io.kestra.core.tasks.debugs.Return
