--- a/core/src/test/resources/flows/valids/each-null.yaml
+++ b/core/src/test/resources/flows/valids/each-null.yaml
@@ -3,8 +3,8 @@ namespace: io.kestra.tests
 
 tasks:
   - id: 1_each
-    type: io.kestra.core.tasks.flows.EachSequential
-    value: '[1, null, {"key": "my-key", "value": "my-value"}]'
+    type: io.kestra.core.tasks.flows.ForEach
+    values: '[1, null, {"key": "my-key", "value": "my-value"}]'
     tasks:
       - id: 1-1
         type: io.kestra.core.tasks.debugs.Return
