--- a/core/src/test/resources/flows/valids/each-object-in-list.yaml
+++ b/core/src/test/resources/flows/valids/each-object-in-list.yaml
@@ -3,8 +3,8 @@ namespace: io.kestra.tests
 
 tasks:
   - id: 1_each
-    type: io.kestra.core.tasks.flows.EachSequential
-    value:
+    type: io.kestra.core.tasks.flows.ForEach
+    values:
       - value 1
       - {"key": "my-key", "value": "my-value"}
       - key: my-complex
