--- a/core/src/test/resources/flows/valids/inputs-large.yaml
+++ b/core/src/test/resources/flows/valids/inputs-large.yaml
@@ -7,8 +7,8 @@ inputs:
 
 tasks:
   - id: 1_each
-    type: io.kestra.core.tasks.flows.EachSequential
-    value: '["1", "2", "3", "4", "5", "6", "7", "8", "9"]'
+    type: io.kestra.core.tasks.flows.ForEach
+    values: '["1", "2", "3", "4", "5", "6", "7", "8", "9"]'
     tasks:
     - id: string
       type: io.kestra.core.tasks.debugs.Return
