--- a/core/src/test/resources/flows/valids/state.yaml
+++ b/core/src/test/resources/flows/valids/state.yaml
@@ -15,8 +15,8 @@ tasks:
         name: "{{ inputs.state }}"
 
       - id: each1
-        type: io.kestra.core.tasks.flows.EachSequential
-        value: '["a", "b"]'
+        type: io.kestra.core.tasks.flows.ForEach
+        values: '["a", "b"]'
         tasks:
           - id: getEach1
             type: io.kestra.core.tasks.states.Get
@@ -36,8 +36,8 @@ tasks:
         name: "{{ inputs.state }}"
 
       - id: each2
-        type: io.kestra.core.tasks.flows.EachSequential
-        value: '["a", "b"]'
+        type: io.kestra.core.tasks.flows.ForEach
+        values: '["a", "b"]'
         tasks:
           - id: getEach2
             type: io.kestra.core.tasks.states.Get
